@@ -41,7 +41,7 @@ extern Z80_OPTS z80_opts;
 #define IS_R2K (z80_opts.sub == SUB_R2K)
 #define IS_R2KA (z80_opts.sub == SUB_R2KA)
 #define IS_R3KA (z80_opts.sub == SUB_R3KA)
-#define IS_RAB (IS_R2K || IS_R3KA)
+#define IS_RAB (IS_R2K || IS_R2KA || IS_R3KA)
 #define IS_GB (z80_opts.sub == SUB_GBZ80)
 #define IS_TLCS90 (z80_opts.sub == SUB_TLCS90)
 #define IS_EZ80_Z80 (z80_opts.sub == SUB_EZ80_Z80)
